# routes/BrandRoute.js
@@ -1,6 +1,12 @@
 const express = require('express');
 const router = express.Router();
-const { addNewBrand } = require('../controller/BrandController');
+const {
+  addNewBrand,
+  updateBrand,
+  deleteBrand,
+  getBrandById,
+  getBrand,
+} = require('../controller/BrandController');
 
 router.post('/Brand', (req, res, next) => {
   addNewBrand(req.body)
@@ -17,6 +23,119 @@ router.post('/Brand', (req, res, next) => {
         result: '',
         isSuccess: false,
         error: err.errors,
+        statusCode: 400,
+      });
+    });
+});
+
+router.put('/Brand', (req, res, next) => {
+  updateBrand(req.body)
+    .then(result => {
+      if (result[0] > 0)
+        return res.status(200).json({
+          result,
+          isSuccess: true,
+          error: '',
+          statusCode: 200,
+        });
+      else
+        return res.status(200).json({
+          result: '',
+          isSuccess: true,
+          error: '',
+          statusCode: 204,
+        });
+    })
+    .catch(err => {
+      return res.status(400).json({
+        result: '',
+        isSuccess: false,
+        error: err,
+        statusCode: 400,
+      });
+    });
+});
+
+router.delete('/Brand/:ID/:MODIFIED_BY', (req, res, next) => {
+  deleteBrand(req.params)
+    .then(result => {
+      if (result[0] > 0)
+        return res.status(200).json({
+          result,
+          isSuccess: true,
+          error: '',
+          statusCode: 200,
+        });
+      else
+        return res.status(200).json({
+          result: '',
+          isSuccess: true,
+          error: '',
+          statusCode: 204,
+        });
+    })
+    .catch(err => {
+      return res.status(400).json({
+        result: '',
+        isSuccess: false,
+        error: err,
+        statusCode: 400,
+      });
+    });
+});
+
+router.get('/Brand/:ID', (req, res, next) => {
+  getBrandById(req.params)
+    .then(result => {
+      console.log(result.dataValues);
+      if (result !== null)
+        return res.status(200).json({
+          result: result.dataValues,
+          isSuccess: true,
+          error: '',
+          statusCode: 200,
+        });
+      else
+        return res.status(200).json({
+          result: '',
+          isSuccess: true,
+          error: '',
+          statusCode: 204,
+        });
+    })
+    .catch(err => {
+      return res.status(400).json({
+        result: '',
+        isSuccess: false,
+        error: err,
+        statusCode: 400,
+      });
+    });
+});
+
+router.get('/Brand', (req, res, next) => {
+  getBrand()
+    .then(result => {
+      if (result !== null)
+        return res.status(200).json({
+          result: result,
+          isSuccess: true,
+          error: '',
+          statusCode: 200,
+        });
+      else
+        return res.status(200).json({
+          result: '',
+          isSuccess: true,
+          error: '',
+          statusCode: 204,
+        });
+    })
+    .catch(err => {
+      return res.status(400).json({
+        result: '',
+        isSuccess: false,
+        error: err,
         statusCode: 400,
       });
     });
